--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/testdb_spring?useSSL=false
+spring.datasource.url=jdbc:mysql://localhost:3306/spring_boot_spring_security_jwt_authentication?useSSL=false
 spring.datasource.username=root
-spring.datasource.password=123456
+spring.datasource.password=123456Azs@#
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.ddl-auto=update
@@ -8,3 +8,6 @@ spring.jpa.hibernate.ddl-auto=update
 # App Properties
 bezkoder.app.jwtSecret= ======================BezKoder=Spring===========================
 bezkoder.app.jwtExpirationMs=86400000
+
+server.port=4848
+server.servlet.context-path=/TestSecurityJwtApp
